feat(notifications): move dispatch/delete/promote to BE-only + fix query issues
- Remove HTTP endpoints dispatch, deleteByFilter, promoteFollowRequest
    from NotificationsController (ora solo uso interno tra servizi BE)
  - Refactor request DTO → command record (NotificationDispatchCommand,
    NotificationDeleteByFilterCommand) in models/commands/
  - Raggruppa strategy per dominio (like/, comment/, follow/, mention/, other/)
  - Fix native query: CAST CITEXT→TEXT, CAST null param AS TIMESTAMPTZ
  - Fix enum persistence: AttributeConverter lowercase per NotificationType
    e NotificationReferenceType (rimuove @Enumerated)
  - Rimuove NotificationDispatchException (non più necessaria)
  - Postman: pm.collectionVariables → pm.environment per token auth
  - Frontend: rimuove backend.ts e commenta i blocchi notifica nei 11
    route handler (TODO lato BE)