@@ -2,18 +2,18 @@ package it.evodev.instagram.notifications.services.impl;
 
 import it.evodev.instagram.auth.repositories.ProfileRepository;
 import it.evodev.instagram.notifications.config.NotificationsProperties;
-import it.evodev.instagram.notifications.dto.NotificationDispatchRequestDTO;
-import it.evodev.instagram.notifications.dto.NotificationListResponseDTO;
-import it.evodev.instagram.notifications.dto.NotificationMutationResponseDTO;
-import it.evodev.instagram.notifications.dto.NotificationResponseDTO;
-import it.evodev.instagram.notifications.dto.NotificationUnreadCountResponseDTO;
+import it.evodev.instagram.notifications.dto.responses.NotificationListResponseDTO;
+import it.evodev.instagram.notifications.dto.responses.NotificationMutationResponseDTO;
+import it.evodev.instagram.notifications.dto.responses.NotificationResponseDTO;
+import it.evodev.instagram.notifications.dto.responses.NotificationUnreadCountResponseDTO;
 import it.evodev.instagram.notifications.exceptions.NotificationAccessDeniedException;
-import it.evodev.instagram.notifications.exceptions.NotificationDispatchException;
 import it.evodev.instagram.notifications.exceptions.NotificationNotFoundException;
 import it.evodev.instagram.notifications.exceptions.NotificationValidationException;
 import it.evodev.instagram.notifications.models.Notification;
-import it.evodev.instagram.notifications.models.NotificationReferenceType;
-import it.evodev.instagram.notifications.models.NotificationType;
+import it.evodev.instagram.notifications.models.commands.NotificationDeleteByFilterCommand;
+import it.evodev.instagram.notifications.models.commands.NotificationDispatchCommand;
+import it.evodev.instagram.notifications.models.enums.NotificationReferenceType;
+import it.evodev.instagram.notifications.models.enums.NotificationType;
 import it.evodev.instagram.notifications.repositories.NotificationFeedProjection;
 import it.evodev.instagram.notifications.repositories.NotificationRepository;
 import it.evodev.instagram.notifications.services.NotificationService;
@@ -26,12 +26,14 @@ import it.evodev.instagram.notifications.util.NotificationTypeMapper;
 import lombok.RequiredArgsConstructor;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
-import org.springframework.dao.DataIntegrityViolationException;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 
 import java.time.LocalDateTime;
+import java.util.HashSet;
 import java.util.List;
+import java.util.Objects;
+import java.util.Set;
 import java.util.UUID;
 
 @Service
@@ -57,7 +59,7 @@ public class NotificationServiceImpl implements NotificationService {
         long unreadCount = notificationRepository.countByRecipientProfileIdAndIsReadFalseAndDeletedAtIsNull(recipientProfileId);
 
         List<NotificationResponseDTO> items = rows.stream().map(this::toResponse).toList();
-        String nextCursor = items.isEmpty() ? null : NotificationCursorUtil.formatCursor(items.get(items.size() - 1).getCreatedAt());
+        String nextCursor = items.isEmpty() ? null : NotificationCursorUtil.formatCursor(items.getLast().getCreatedAt());
         logger.info("Listing notifications completed - recipientProfileId: {}, count: {}", recipientProfileId, items.size());
         return new NotificationListResponseDTO(items, nextCursor, unreadCount);
     }
@@ -123,24 +125,96 @@ public class NotificationServiceImpl implements NotificationService {
 
     @Override
     @Transactional
-    public NotificationResponseDTO dispatch(UUID authSubjectUuid, NotificationDispatchRequestDTO request) {
-        logger.info("Dispatch notification started - senderProfileId: {}, recipientProfileId: {}, type: {}",
-                request.getSenderProfileId(), request.getRecipientProfileId(), request.getType());
+    public NotificationMutationResponseDTO deleteByFilter(UUID authSubjectUuid, NotificationDeleteByFilterCommand command) {
         Long authenticatedProfileId = resolveCurrentProfileId(authSubjectUuid);
-        if (!authenticatedProfileId.equals(request.getSenderProfileId())) {
+        logger.info("Delete notifications by filter started - authProfileId: {}, recipientProfileId: {}, senderProfileId: {}",
+                authenticatedProfileId, command.recipientProfileId(), command.senderProfileId());
+
+        if (!authenticatedProfileId.equals(command.recipientProfileId())
+                && (command.senderProfileId() == null || !authenticatedProfileId.equals(command.senderProfileId()))) {
+            logger.warn("Delete notifications by filter denied - authProfileId: {}, recipientProfileId: {}, senderProfileId: {}",
+                    authenticatedProfileId, command.recipientProfileId(), command.senderProfileId());
+            throw new NotificationAccessDeniedException("Delete filter is not allowed for authenticated profile");
+        }
+
+        if (command.type() != null && command.types() != null && !command.types().isEmpty()) {
+            throw new NotificationValidationException("Use either type or types in delete filter command");
+        }
+
+        NotificationReferenceType normalizedReferenceType = NotificationTypeMapper.toReferenceType(command.referenceType());
+        Set<NotificationType> acceptedTypes = new HashSet<>();
+        if (command.type() != null) {
+            acceptedTypes.add(NotificationTypeMapper.toNotificationType(command.type()));
+        }
+        if (command.types() != null && !command.types().isEmpty()) {
+            command.types().forEach(type -> acceptedTypes.add(NotificationTypeMapper.toNotificationType(type)));
+        }
+
+        List<Notification> candidates = notificationRepository.findByRecipientProfileIdAndDeletedAtIsNullOrderByCreatedAtDesc(command.recipientProfileId());
+        LocalDateTime now = LocalDateTime.now();
+        List<Notification> toDelete = candidates.stream()
+                .filter(n -> command.senderProfileId() == null || Objects.equals(n.getSenderProfileId(), command.senderProfileId()))
+                .filter(n -> acceptedTypes.isEmpty() || acceptedTypes.contains(n.getType()))
+                .filter(n -> normalizedReferenceType == null || n.getReferenceType() == normalizedReferenceType)
+                .filter(n -> command.referenceId() == null || Objects.equals(n.getReferenceId(), command.referenceId()))
+                .peek(n -> n.setDeletedAt(now))
+                .toList();
+
+        if (!toDelete.isEmpty()) {
+            notificationRepository.saveAll(toDelete);
+        }
+
+        logger.info("Delete notifications by filter completed - updatedCount: {}", toDelete.size());
+        return new NotificationMutationResponseDTO(true, toDelete.size(), "Notifications deleted by filter");
+    }
+
+    @Override
+    @Transactional
+    public NotificationMutationResponseDTO promoteFollowRequest(UUID authSubjectUuid, Long recipientProfileId, Long followerProfileId) {
+        Long authenticatedProfileId = resolveCurrentProfileId(authSubjectUuid);
+        logger.info("Promote follow request notifications started - authProfileId: {}, recipientProfileId: {}, followerProfileId: {}",
+                authenticatedProfileId, recipientProfileId, followerProfileId);
+
+        if (!authenticatedProfileId.equals(recipientProfileId)) {
+            logger.warn("Promote follow request denied - authProfileId: {}, recipientProfileId: {}", authenticatedProfileId, recipientProfileId);
+            throw new NotificationAccessDeniedException("Only recipient can promote follow request notifications");
+        }
+
+        List<Notification> notifications = notificationRepository.findByRecipientProfileIdAndSenderProfileIdAndTypeAndDeletedAtIsNull(
+                recipientProfileId,
+                followerProfileId,
+                NotificationType.FOLLOW_REQUEST
+        );
+
+        notifications.forEach(n -> n.setType(NotificationType.FOLLOW));
+        if (!notifications.isEmpty()) {
+            notificationRepository.saveAll(notifications);
+        }
+
+        logger.info("Promote follow request notifications completed - updatedCount: {}", notifications.size());
+        return new NotificationMutationResponseDTO(true, notifications.size(), "Follow request notifications promoted");
+    }
+
+    @Override
+    @Transactional
+    public NotificationResponseDTO dispatch(UUID authSubjectUuid, NotificationDispatchCommand command) {
+        logger.info("Dispatch notification started - senderProfileId: {}, recipientProfileId: {}, type: {}",
+                command.senderProfileId(), command.recipientProfileId(), command.type());
+        Long authenticatedProfileId = resolveCurrentProfileId(authSubjectUuid);
+        if (!authenticatedProfileId.equals(command.senderProfileId())) {
             logger.warn("Dispatch denied due to sender mismatch - authenticatedProfileId: {}, senderProfileId: {}",
-                    authenticatedProfileId, request.getSenderProfileId());
+                    authenticatedProfileId, command.senderProfileId());
             throw new NotificationAccessDeniedException("Sender profile mismatch");
         }
 
-        NotificationType normalizedType = NotificationTypeMapper.toNotificationType(request.getType());
-        NotificationReferenceType normalizedReferenceType = NotificationTypeMapper.toReferenceType(request.getReferenceType());
+        NotificationType normalizedType = NotificationTypeMapper.toNotificationType(command.type());
+        NotificationReferenceType normalizedReferenceType = NotificationTypeMapper.toReferenceType(command.referenceType());
         NotificationContext context = new NotificationContext(
-                request.getRecipientProfileId(),
-                request.getSenderProfileId(),
+                command.recipientProfileId(),
+                command.senderProfileId(),
                 normalizedType,
                 normalizedReferenceType,
-                request.getReferenceId()
+                command.referenceId()
         );
 
         if (context.getRecipientProfileId().equals(context.getSenderProfileId())) {
@@ -168,24 +242,16 @@ public class NotificationServiceImpl implements NotificationService {
             throw new NotificationValidationException("Duplicate notification detected");
         }
 
-        try {
-            Notification entity = new Notification();
-            entity.setRecipientProfileId(context.getRecipientProfileId());
-            entity.setSenderProfileId(context.getSenderProfileId());
-            entity.setType(buildResult.getType());
-            entity.setReferenceType(buildResult.getReferenceType());
-            entity.setReferenceId(buildResult.getReferenceId());
-            entity.setIsRead(false);
-            Notification saved = notificationRepository.save(entity);
-            logger.info("Dispatch notification completed - notificationUuid: {}", saved.getId());
-            return toResponse(saved);
-        } catch (DataIntegrityViolationException e) {
-            logger.error("Dispatch failed due to integrity violation: {}", e.getMessage());
-            throw e;
-        } catch (RuntimeException e) {
-            logger.error("Dispatch failed due to runtime error: {}", e.getMessage());
-            throw new NotificationDispatchException("Unable to dispatch notification");
-        }
+        Notification entity = new Notification();
+        entity.setRecipientProfileId(context.getRecipientProfileId());
+        entity.setSenderProfileId(context.getSenderProfileId());
+        entity.setType(buildResult.getType());
+        entity.setReferenceType(buildResult.getReferenceType());
+        entity.setReferenceId(buildResult.getReferenceId());
+        entity.setIsRead(false);
+        Notification saved = notificationRepository.save(entity);
+        logger.info("Dispatch notification completed - notificationUuid: {}", saved.getId());
+        return toResponse(saved);
     }
 
     private Long resolveCurrentProfileId(UUID authSubjectUuid) {
